ScriptEditor追加