@@ -31,4 +31,4 @@ dependencies {
 
 // Define the main class for the application
 mainClassName = 'jp.tkms.waffle.Main'
-
+applicationDefaultJvmArgs = ["--illegal-access=deny", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"]
